--- a/style.css
+++ b/style.css
@@ -17,14 +17,14 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1rem;
+    gap: 1vw;
 }
 
 .week {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 0.5rem;
+    gap: 0.5vw;
     color: #2d2d2d;
     font-weight: bold;
     font-family: 'Orbitron', monospace;
@@ -39,15 +39,15 @@ body {
     background-color: black;
     color: #fff;
     display: flex;
-    border-radius: 2rem;
+    border-radius: 2vw;
     user-select: none;
-    padding: 0 2rem;
-    border: 0.5rem solid #2d2d2d;
+    padding: 0 2vw;
+    border: 0.5vw solid #2d2d2d;
 }
 
 .time {
     font-family: "Orbitron", monospace;
-    letter-spacing: 0.1rem;
+    letter-spacing: 0.1vw;
 }
 
 .hour,
@@ -55,13 +55,13 @@ body {
 .sec,
 .dot {
     display: inline-block;
-    font-size: 13rem;
+    font-size: 13vw;
 }
 
 .ampm {
     display: inline-block;
-    font-size: 4rem;
-    margin-left: 1rem;
+    font-size: 4vw;
+    margin-left: 1vw;
     align-self: flex-end;
     font-family: "Orbitron", monospace;
 }
