--- a/style.css
+++ b/style.css
@@ -33,7 +33,12 @@ body {
 
 .week .active {
     color: rgb(255, 255, 255);
+    text-shadow: 0 0 5px rgba(255, 255, 255, 0.7); 
 }
+.week .active:nth-child(7) {
+    color: #ff4d4d;
+    text-shadow: 0 0 5px rgba(255, 77, 77, 0.7); 
+  }
 
 .digital-clock {
     background-color: black;
